Archive2/0d/055ce525f826de/output
main.cpp:1:1: error: expected unqualified-id
if(function_zero(&myMutableObject) == FAILURE)
^
main.cpp:5:1: error: expected unqualified-id
else if(function_one(&myMutableObject) == FAILURE)
^
main.cpp:9:1: error: expected unqualified-id
else if(function_two(&myMutableObject) == FAILURE)
^
main.cpp:13:1: error: expected unqualified-id
else if(function_three(&myMutableObject) == FAILURE)
^
4 errors generated.
